--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">TechnoJam</string>
+
+    <string name="text">Home</string>
+    <string name="text2">Task</string>
+    <string name="text3">Profile</string>
+    <string name="text4">Events</string>
+    <string name="action_clear">Clear</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
